describe responses and make small fixes
